# ESP32-Quadcopter

./: .gitignore  CMakeLists.txt  sdkconfig
Arduino_IDE/ESP32_Quadcopter/: ESP32_Quadcopter.ino
Old Core_Files/: button.cpp  hal_timer_pwm.cpp  hal_timer_pwm.h  i2c_mpu_debug.cpp  i2c_mpu_debug.h  led.cpp  led.h  xx_mpu_data_fusion.cpp
_src/: button.h  pid_control.cpp  pid_control.h  telemetry.cpp  telemetry.h  xx_mpu_data_fusion.h
asset/: drone_budget.html
assets/: drone_budget-v2.html  imu_simulator_complementary_filter_with-dashboard-v1.html  imu_simulator_complementary_filter_with-dashboard-v2.html  project-architecture.txt  telemetry_pipeline.html  temp.md  yaw_drift_widget.html
assets/M1-assets/: M1-complementary_filter-simulate.html  M1-drone_budget-v2.html  M1-formula-explain-drone_budget(polling).md
docs/: I2C-RC-scientific-research.md  I2C.md  Stage_8-Log-data-MPU_Calibration.md  Stage_8-MPU_Calibration.md  Tổng hợp.md  current_and_future-knowledge-updated-v2.md  current_and_future-knowledge-updated-v3.md  embedded-bluetooth-app-for-drone.md  motor-driver-test.md  project-architecture.txt  simplified_current_and_future-knowledge-updated.md  temp-esp32.md  temp-v2.md  temp.md  windify_imu_analysis.md
docs/M1-docs/: M1-questions-Interrupt-Theory.md  (+5 more)
include/: drn_button.h  drn_main_board_choose.h  drn_motor_pwm.h  drn_mpu6050.h  drn_raw_mpu6050.h  drn_time.h  drn_timer_pwm.h
main/: CMakeLists.txt  main.cpp
src/: drn_button.cpp  drn_main_board_choose.cpp  drn_motor_pwm.cpp  drn_mpu6050.cpp  drn_raw_mpu6050.cpp  drn_time.cpp  drn_timer_pwm.cpp
(+3 files in other folders)
